@@ -21,7 +21,7 @@ noinst_HEADERS = c-io.h
 
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src -I$(top_srcdir)/tests
 
-TESTS = $(CalcTests) ReadRegress RandTest ShiftTest simple_test
+TESTS = $(CalcTests) ReadRegress RandTest shift_test simple_test
 
 EXTRA_DIST = NumberRegress ReadRegress ReadIn.txt ReadOut.regress
 
