@@ -1,0 +1,3 @@
+10 << rn 350
+10 >> rn 350
+Bytes from 0xdeadbeef12345678:  de ad be ef 12 34 56 78
